--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ img {
 
         <div class ="menu">
             <a href="/" class="is-active">Home</a>
-            <a href="/views/slashcommands.html">Commands</a>
+            <a href="/slashcommands.html">Commands</a>
             <a href="/about">About</a>
             <a href="https://discord.gg/HVyHjy7Vzp">Join Our Discord</a>
             <a href="https://www.paypal.me/zouxabot">Donate</a>
