--- a/index.html
+++ b/index.html
@@ -271,6 +271,38 @@ img {
 <body>
 <div>
 
+  <script>
+    const express = require('express');
+const router  = express.Router();
+const {ensureAuthenticated} = require('../config/auth') 
+//login page
+//register page
+router.get('/commands/slashcommands', (req,res)=>{
+    res.sendFile('./slashcommands.html', {root: 'views'})
+})
+router.get('/register', (req,res)=>{
+    res.render('register');
+})
+router.get('/dashboard',ensureAuthenticated,(req,res)=>{
+    res.render(('dashboard'), {
+        user: req.user
+    });
+})
+router.get('/login', (req,res)=>{
+    res.render('login');
+})
+router.get('/test', (req,res)=>{
+    res.render('test');
+})
+router.get('/test2', (req,res)=>{
+    res.render('test2');
+})
+router.get('/commands/slashcommands', (req,res)=>{
+    res.render('slashcommands');
+})
+module.exports = router;
+  </script>
+
 <script>
 
 const Signin = document.querySelector('.Signin');
