--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@ img {
 
         <div class ="menu">
             <a href="/" class="is-active">Home</a>
-            <a href="./slashcommands">Commands</a>
-            <a href="/about">About</a>
+            <a href="./commands/slashcommands">Commands</a>
+            <a href="./about">About</a>
             <a href="https://discord.gg/HVyHjy7Vzp">Join Our Discord</a>
             <a href="https://www.paypal.me/zouxabot">Donate</a>
             <a href="login.html">Sign In</a>
@@ -261,11 +261,11 @@ img {
 
 <div id="mySidebar" class="sidebar">
   <a href="/">Home</a>
-  <a href="/slashcommands.html">Commands</a>
-  <a href="/about">About</a>
+  <a href="./commands/slashcommands">Commands</a>
+  <a href="./about">About</a>
   <a href="https://discord.gg/HVyHjy7Vzp">Join Our Discord</a>
   <a href="https://www.paypal.me/zouxabot">Donate</a>
-  <a href="login.html">Sign In</a>
+  <a href="login.html">Invite Me</a>
 </div>
 
 <body>
