--- a/about.html
+++ b/about.html
@@ -242,9 +242,9 @@ img {
         </div>
 
         <div class ="menu">
-            <a href="/" class="is-active">Home</a>
+            <a href="/">Home</a>
             <a href="/commands/slashcommands">Commands</a>
-            <a href="/about">About</a>
+            <a href="/about" class="is-active">About</a>
             <a href="https://discord.gg/HVyHjy7Vzp">Join Our Discord</a>
             <a href="https://www.paypal.me/zouxabot">Donate</a>
             <a href="/users/login">Sign In</a>
