--- a/commands/slashcommands.html
+++ b/commands/slashcommands.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Zouxa</title>
+  <img src="https://media.tenor.com/bC9Fog9Bqo4AAAAC/ranboo-ranboo-live.gif">
+  
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
