--- a/commands/slashcommands.html
+++ b/commands/slashcommands.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Zouxa</title>
-  <img src="https://media.tenor.com/bC9Fog9Bqo4AAAAC/ranboo-ranboo-live.gif">
+  <link rel="shortcut icon" type="image/gif" href="https://media.tenor.com/bC9Fog9Bqo4AAAAC/ranboo-ranboo-live.gif"/>
   
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
