--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>About</title>
+  <link rel="shortcut icon" type="image/gif" href="https://media.tenor.com/bC9Fog9Bqo4AAAAC/ranboo-ranboo-live.gif"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
