--- a/commands/slashcommands.html
+++ b/commands/slashcommands.html
@@ -185,7 +185,7 @@ top: 25px;
             .box {
               display: block;
             }
-            .boxfix {
+            .mobileb {
               display: none;
             }
         }
@@ -195,7 +195,7 @@ top: 25px;
             display: none;
           }
 
-          .boxfix {
+          .mobileb {
             display: block;
           }
         }
@@ -347,7 +347,7 @@ background-color: #2b2b2b;
 
 /**************************/
 
-.boxfix {
+.mobileb {
     position: absolute;
   top: 200%;
   -ms-transform: translateY(-50%);
@@ -361,85 +361,8 @@ background-color: #2b2b2b;
 
 }
 
-.blue {
+.blueb {
   background-color: #2b2b2b;
-}
-
-.boxfix1 {
-  position: absolute;
-top: 70%;
--ms-transform: translateY(-50%);
-transform: translateY(-50%);
-left: 20px;
-top: 350px;
-height: 337px;
-width: 330px;
-border: 1px solid black;
-text-align: center;
-
-}
-
-.box1 {border-radius: 8px;}
-
-.blue {
-background-color: #2b2b2b;
-}
-
-.box2 {
-  position: absolute;
-top: 50%;
--ms-transform: translateY(-50%);
-transform: translateY(-50%);
-left: 350px;
-height: 337px;
-width: 330px;
-border: 1px solid black;
-text-align: center;
-
-}
-
-.box2 {border-radius: 8px;}
-
-.blue {
-background-color: #2b2b2b;
-}
-
-.box3 {
-  position: absolute;
-top: 50%;
--ms-transform: translateY(-50%);
-transform: translateY(-50%);
-left: 350px;
-height: 337px;
-width: 330px;
-border: 1px solid black;
-text-align: center;
-
-}
-
-.box3 {border-radius: 8px;}
-
-.blue {
-background-color: #2b2b2b;
-}
-
-.box4 {
-  position: absolute;
-top: 50%;
--ms-transform: translateY(-50%);
-transform: translateY(-50%);
-left: 350px;
-height: 337px;
-width: 330px;
-border: 1px solid black;
-text-align: center;
-
-}
-
-.box4 {border-radius: 8px;}
-
-.blue {
-background-color: #2b2b2b;
 }
 
 img {
@@ -571,7 +494,7 @@ img {
 
         <body>
           <div>
-              <div class='boxfix blue'>
+              <div class='mobileb blueb'>
           
               </br>
               <div class="block-display">
