--- a/commands/slashcommands.html
+++ b/commands/slashcommands.html
@@ -497,7 +497,7 @@ img {
               <div class='mobileb blueb'>
           
               </br>
-              <div class="block-display">
+              <div class="display-block">
                 <h1>EXAMPLE</h1>
                 
               </div>
