--- a/commands/slashcommands.html
+++ b/commands/slashcommands.html
@@ -189,8 +189,10 @@ top: 25px;
 
         @media (max-width: 480px) {
 
-          .box { flex-wrap: wrap;  }
-          .block-display:first-child { flex-basis: 100%; }
+          .box {border:none;}
+	        .box {
+		flex: 1 1 100%;
+		min-height: 325px;
           
         }
 
