--- a/commands/testcommand.html
+++ b/commands/testcommand.html
@@ -26,14 +26,14 @@
     font-size: 50px;
   }
 
-  @media screen and(mac-width:1200px) {
+  @media screen and(max-width:1200px) {
     .box {
       width: 40%;
     }
     
   }
 
-  @media screen and(mac-width:600px) {
+  @media screen and(max-width:600px) {
     .box {
       width: 90%;
     }
