--- a/commands/testcommand.html
+++ b/commands/testcommand.html
@@ -329,51 +329,42 @@ img {
   <a href="/users/login">Sign In</a>
 </div>
 
-<body>
-<div>
-    <div class='box blue'>
-
-    </br>
-    <div class="block-display">
-      </br>
-      <a href="#">
-        <button class="button is-active">Slashcommands </button>
-    </a>
-    <a href="#">
-        <button class="button">Moderation </button>
-    </a>
-    <a href="#">
-        <button class="button">Giveaways </button>
-    </a>
-    <a href="#">
-        <button class="button">Roles </button>
-    </a>
-    <a href="#">
-        <button class="button">Management </button>
-    </a>
-    <a href="#">
-        <button class="button">Extra </button>
-    </a>
-    </div>
-    <br>
-</body>
-
 <div class="contain">
   <div class="quote">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi nesciunt ullam itaque! Consequuntur, asperiores modi!</p>
-      <span>John Doe</span>
+  </br>
+  <a href="#">
+    <button class="button is-active">Slashcommands </button>
+</a>
+<a href="#">
+    <button class="button">Moderation </button>
+</a>
+<a href="#">
+    <button class="button">Giveaways </button>
+</a>
+<a href="#">
+    <button class="button">Roles </button>
+</a>
+<a href="#">
+    <button class="button">Management </button>
+</a>
+<a href="#">
+    <button class="button">Extra </button>
+</a>
+</div>
+<br>
+      <span></span>
   </div>
   <div class="quote span-2">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi nesciunt ullam itaque! Consequuntur, asperiores modi!</p>
-      <span>John Doe</span>
+      <span></span>
   </div>
   <div class="quote">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi nesciunt ullam itaque! Consequuntur, asperiores modi!</p>
-      <span>John Doe</span>
+      <span></span>
   </div>
   <div class="quote">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi nesciunt ullam itaque! Consequuntur, asperiores modi!</p>
-      <span>John Doe</span>
+      <span></span>
   </div>
 </div>
 
