--- a/index.html
+++ b/index.html
@@ -243,12 +243,12 @@ img {
         </div>
 
         <div class ="menu">
-            <a href="/" class="is-active">Home</a>
-            <a href="./commands/slashcommands">Commands</a>
-            <a href="./about">About</a>
-            <a href="https://discord.gg/HVyHjy7Vzp">Join Our Discord</a>
-            <a href="https://www.paypal.me/zouxabot">Donate</a>
-            <a href="login.html">Sign In</a>
+            <a href="/">Home</a>
+          <a href="/commands/slashcommands" class="is-active">Commands</a>
+          <a href="/about">About</a>
+          <a href="https://www.paypal.me/zouxabot">Donate</a>
+          <a href="https://discord.gg/HVyHjy7Vzp">Join Our Discord</a>
+          <a href="https://discord.com/api/oauth2/authorize?client_id=983058805661249536&permissions=8&scope=bot%20applications.commands">Invite Me</a>
         </div>
 
         <button class="Signin">
@@ -263,11 +263,11 @@ img {
 
 <div id="mySidebar" class="sidebar">
   <a href="/">Home</a>
-  <a href="./commands/slashcommands">Commands</a>
-  <a href="./about">About</a>
-  <a href="https://discord.gg/HVyHjy7Vzp">Join Our Discord</a>
-  <a href="https://www.paypal.me/zouxabot">Donate</a>
-  <a href="login.html">Invite Me</a>
+          <a href="/commands/slashcommands" class="is-active">Commands</a>
+          <a href="/about">About</a>
+          <a href="https://www.paypal.me/zouxabot">Donate</a>
+          <a href="https://discord.gg/HVyHjy7Vzp">Join Our Discord</a>
+          <a href="https://discord.com/api/oauth2/authorize?client_id=983058805661249536&permissions=8&scope=bot%20applications.commands">Invite Me</a>
 </div>
 
 <body>
