--- a/commands/management.html
+++ b/commands/management.html
@@ -8,31 +8,31 @@
 
 <div>
     <a href="./slashcommands">
-        <button class="button is-active">Slashcommands </button>
+        <button class="button">Slashcommands </button>
     </a>
 </div>
 <div>
-    <a href="./commands/setup">
+    <a href="./setup">
         <button class="button">Setup </button>
     </a>
 </div>
 <div>
-    <a href="./commands/management">
-        <button class="button">Management </button>
+    <a href="./management">
+        <button class="button is-active">Management </button>
     </a>
 </div>
 <div>
-    <a href="./commands/giveaways">
+    <a href="./giveaways">
         <button class="button">Giveaways </button>
     </a>
 </div>
 <div>
-    <a href="./commands/roles">
+    <a href="./roles">
         <button class="button">Roles </button>
     </a>
 </div>
 <div>
-    <a href="./commands/other">
+    <a href="./other">
         <button class="button">Other </button>
     </a>
 </div>
@@ -542,7 +542,7 @@ img {
 
     <div id="mySidebar" class="sidebar">
         <a href="/">Home</a>
-        <a href="/commands/slashcommands" class="is-active">Commands</a>
+        <a href="/commands/slashcommands">Commands</a>
         <a href="/about">About</a>
         <a href="https://www.paypal.me/zouxabot">Donate</a>
         <a href="https://discord.gg/HVyHjy7Vzp">Join Our Discord</a>
