--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@ img {
         </div>
 
         <div class ="menu">
-            <a href="/">Home</a>
-          <a href="/commands/slashcommands" class="is-active">Commands</a>
+            <a href="/" class="is-active">Home</a>
+          <a href="/commands/slashcommands">Commands</a>
           <a href="/about">About</a>
           <a href="https://www.paypal.me/zouxabot">Donate</a>
           <a href="https://discord.gg/HVyHjy7Vzp">Join Our Discord</a>
@@ -263,7 +263,7 @@ img {
 
 <div id="mySidebar" class="sidebar">
   <a href="/">Home</a>
-          <a href="/commands/slashcommands" class="is-active">Commands</a>
+          <a href="/commands/slashcommands">Commands</a>
           <a href="/about">About</a>
           <a href="https://www.paypal.me/zouxabot">Donate</a>
           <a href="https://discord.gg/HVyHjy7Vzp">Join Our Discord</a>
