--- a/commands/slashcommands.html
+++ b/commands/slashcommands.html
@@ -7,34 +7,34 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <div>
-    <a href="./slashcommands">
-        <button class="button is-active">Slashcommands </button>
-    </a>
+  <a href="./slashcommands">
+      <button class="button is-active">Slashcommands </button>
+  </a>
 </div>
 <div>
-    <a href="./commands/setup">
-        <button class="button">Setup </button>
-    </a>
+  <a href="./setup">
+      <button class="button">Setup </button>
+  </a>
 </div>
 <div>
-    <a href="./commands/management">
-        <button class="button">Management </button>
-    </a>
+  <a href="./management">
+      <button class="button">Management </button>
+  </a>
 </div>
 <div>
-    <a href="./commands/giveaways">
-        <button class="button">Giveaways </button>
-    </a>
+  <a href="./giveaways">
+      <button class="button">Giveaways </button>
+  </a>
 </div>
 <div>
-    <a href="./commands/roles">
-        <button class="button">Roles </button>
-    </a>
+  <a href="./roles">
+      <button class="button">Roles </button>
+  </a>
 </div>
 <div>
-    <a href="./commands/other">
-        <button class="button">Other </button>
-    </a>
+  <a href="./other">
+      <button class="button">Other </button>
+  </a>
 </div>
 
 <div>
@@ -542,7 +542,7 @@ img {
 
     <div id="mySidebar" class="sidebar">
         <a href="/">Home</a>
-        <a href="/commands/slashcommands" class="is-active">Commands</a>
+        <a href="/commands/slashcommands">Commands</a>
         <a href="/about">About</a>
         <a href="https://www.paypal.me/zouxabot">Donate</a>
         <a href="https://discord.gg/HVyHjy7Vzp">Join Our Discord</a>
