--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <title>Zouxa</title>
   <link rel="shortcut icon" type="image/gif" href="https://media.tenor.com/bC9Fog9Bqo4AAAAC/ranboo-ranboo-live.gif"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Discord Bot made by RISU#9198">
+    <meta name="theme-color" content="#8c38ff">
 <style>
 body {
   font-family: "Lato", sans-serif;
