--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <title>Zouxa</title>
   <link rel="shortcut icon" type="image/gif" href="https://media.tenor.com/bC9Fog9Bqo4AAAAC/ranboo-ranboo-live.gif"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Discord Bot made by RISU#9198">
+<meta name="description" content="Zouxa is the discord bot that offers an advanced moderation and giveaway system with many many more awesome features">
+<img src="https://media.tenor.com/bC9Fog9Bqo4AAAAC/ranboo-ranboo-live.gif"
+     width="50" 
+     height="50" />
     <meta name="theme-color" content="#8c38ff">
 <style>
 body {
