--- a/commands/giveaways.html
+++ b/commands/giveaways.html
@@ -3,6 +3,8 @@
 <head>
   <title>Zouxa</title>
   <link rel="shortcut icon" type="image/gif" href="https://media.tenor.com/bC9Fog9Bqo4AAAAC/ranboo-ranboo-live.gif"/>
+  <meta name="description" content="Zouxa is the discord bot that offers an advanced moderation and giveaway system with many many more awesome features">
+    <meta name="theme-color" content="#8c38ff">
   
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
