--- a/404.html
+++ b/404.html
@@ -456,7 +456,7 @@ img {
 
         <div class ="menu">
           <a href="/">Home</a>
-          <a href="/commands/slashcommands" class="is-active">Commands</a>
+          <a href="/commands/slashcommands">Commands</a>
           <a href="/about">About</a>
           <a href="https://www.paypal.me/zouxabot">Donate</a>
           <a href="https://discord.gg/HVyHjy7Vzp">Join Our Discord</a>
