--- a/404.html
+++ b/404.html
@@ -9,12 +9,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-                    <h5 style="font-size: 50px; text-align: cneter; color: "#FFF"; margin-top: "5em"; ">404</h5>
-                </div>
-    
-    <div>
-                    <h5 style="font-size: 50px; text-align: cneter; color: "#FFF"; margin-top: "2em"; ">PAGE NOT FOUND</h5>
-                </div>
+                    <div style="display: grid;
+            grid-gap: 2em;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); padding-left: 1em; padding-right: 1em; margin-top: 7em; color: #FFF; text-align: center; font-size: 50px;">404</div>
+	<div style="display: grid;
+            grid-gap: 2em;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); padding-left: 1em; padding-right: 1em; margin-top: 2em; color: #FFF; text-align: center; font-size: 30px;">PAGE NOT FOUND</div>
 
 
 <style>
