--- a/404.html
+++ b/404.html
@@ -11,10 +11,10 @@
 
                     <div style="display: grid;
             grid-gap: 2em;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); padding-left: 1em; padding-right: 1em; margin-top: 3em; color: #FFF; text-align: center; font-size: 300px;">404</div>
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); padding-left: 1em; padding-right: 1em; margin-top: 1em; color: #FFF; text-align: center; font-size: 300px;">404</div>
 	<div style="display: grid;
             grid-gap: 2em;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); padding-left: 1em; padding-right: 1em; margin-top: 2em; color: #FFF; text-align: center; font-size: 100px;">PAGE NOT FOUND</div>
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); padding-left: 1em; padding-right: 1em; margin-top: 2em; margin-bottom: 2em; color: #FFF; text-align: center; font-size: 100px;">PAGE NOT FOUND</div>
 
 
 <style>
