--- a/404.html
+++ b/404.html
@@ -11,10 +11,10 @@
 
                     <div style="display: grid;
             grid-gap: 2em;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); padding-left: 1em; padding-right: 1em; margin-top: 1em; color: #FFF; text-align: center; font-size: 300px;">404</div>
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); padding-left: 1em; padding-right: 1em; margin-top: 0em; color: #FFF; text-align: center; font-size: 300px;">404</div>
 	<div style="display: grid;
             grid-gap: 2em;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); padding-left: 1em; padding-right: 1em; margin-top: 2em; margin-bottom: 2em; color: #FFF; text-align: center; font-size: 100px;">PAGE NOT FOUND</div>
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); padding-left: 1em; padding-right: 1em; margin-top: 1em; margin-bottom: 2em; color: #FFF; text-align: center; font-size: 100px;">PAGE NOT FOUND</div>
 
 
 <style>
@@ -440,6 +440,7 @@ img {
 @media screen and (max-height: 450px) {
   .sidebar {padding-top: 15px;}
   .sidebar a {font-size: 18px;}
+	.contain {font-size 100px}
 }
 
 </style>
