--- a/404.html
+++ b/404.html
@@ -7,6 +7,19 @@
     <meta name="theme-color" content="#8c38ff">
   
 <meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	<div class="contain1">
+                <div style="margin-top: 5em;" class="quote1">
+                     <div style="display: grid;
+            grid-gap: 2em;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); padding-left: 1em; padding-right: 1em; margin-top: 0em; color: #FFF; text-align: center; font-size: 300px;">404</div>
+	<div style="display: grid;
+            grid-gap: 2em;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); padding-left: 1em; padding-right: 1em; margin-top: 1em; margin-bottom: 2em; color: #FFF; text-align: center; font-size: 100px;">PAGE NOT FOUND</div>
+
+                </div>
+                </div>
+	</div>
 
 
                     <div style="display: grid;
