--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
                 <div style="margin-top: 5em;" class="quote1">
                      <div style="display: grid;
             grid-gap: 2em;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); padding-left: 1em; padding-right: 1em; margin-top: 0em; color: #FFF; text-align: center; font-size: 300px;">404</div>
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); padding-left: 1em; padding-right: 1em; margin-top: 30px; color: #FFF; text-align: center; font-size: 300px;">404</div>
 	<div style="display: grid;
             grid-gap: 2em;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); padding-left: 1em; padding-right: 1em; margin-top: 1em; margin-bottom: 2em; color: #FFF; text-align: center; font-size: 100px;">PAGE NOT FOUND</div>
@@ -22,14 +22,7 @@
 	</div>
 
 
-                    <div style="display: grid;
-            grid-gap: 2em;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); padding-left: 1em; padding-right: 1em; margin-top: 0em; color: #FFF; text-align: center; font-size: 300px;">404</div>
-	<div style="display: grid;
-            grid-gap: 2em;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); padding-left: 1em; padding-right: 1em; margin-top: 1em; margin-bottom: 2em; color: #FFF; text-align: center; font-size: 100px;">PAGE NOT FOUND</div>
-
-
+                    
 <style>
 
 .contain2 {
