--- a/404.html
+++ b/404.html
@@ -448,6 +448,10 @@ img {
   .sidebar a {font-size: 18px;}
 	.contain {font-size 50px}
 }
+	
+	@media screen and (max-width: 380px) {
+	.contain {font-size 50px}
+}
 
 </style>
 
