--- a/404.html
+++ b/404.html
@@ -12,13 +12,15 @@
                 <div style="margin-top: 5em;" class="quote1">
                      <div style="display: grid;
             grid-gap: 2em;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); padding-left: 1em; padding-right: 1em; margin-top: 30px; color: #FFF; text-align: center; font-size: 100px;">404</div>
-	<div style="display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); padding-left: 1em; padding-right: 1em; margin-top: 1em; margin-bottom: 2em; color: #FFF; text-align: center; font-size: 50px;">404iv>
+ <div style="margin-top: 5em;" class="quote1">
+			     <div style="display: grid;
             grid-gap: 2em;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); padding-left: 1em; padding-right: 1em; margin-top: 1em; margin-bottom: 2em; color: #FFF; text-align: center; font-size: 50px;">PAGE NOT FOUND</div>
 
                 </div>
                 </div>
+		</div>
 	</div>
 
 
