--- a/commands/slashcommands.html
+++ b/commands/slashcommands.html
@@ -57,13 +57,46 @@
 </div>
 <div class="quote">
     <div>
-            <h5 style="color: #FFF;">ban</h5>
+            <h5 style="color: #FFF;">addrole</h5>
     </div>
     <div>
-        <h5 style="padding-top: 20px; color: #4f8cff;">Bans a user</h5>
+        <h5 style="padding-top: 20px; color: #4f8cff;">Add&nbsp;&nbsp;a&nbsp;&nbsp;role&nbsp;&nbsp;for&nbsp;&nbsp;to&nbsp;&nbsp;user</h5>
 </div>
 <div>
-    <h5 style="padding-top: 20px; color: #FFF;">/ban [user] [reason]</h5>
+    <h5 style="padding-top: 20px; color: #FFF;">/addrole&nbsp;&nbsp;[user]&nbsp;&nbsp;[role]</h5>
+</div>
+</div>
+<div class="quote">
+    <div>
+            <h5 style="color: #FFF;">antilink</h5>
+    </div>
+    <div>
+        <h5 style="padding-top: 20px; color: #4f8cff;">If&nbsp;&nbsp;enabled&nbsp;&nbsp;users&nbsp;&nbsp;cannot&nbsp;&nbsp;send&nbsp;&nbsp;links</h5>
+</div>
+<div>
+    <h5 style="padding-top: 20px; color: #FFF;">/antilink&nbsp;&nbsp;on/off</h5>
+</div>
+</div>
+<div class="quote">
+    <div>
+            <h5 style="color: #FFF;">antimention</h5>
+    </div>
+    <div>
+        <h5 style="padding-top: 20px; color: #4f8cff;">If&nbsp;&nbsp;enbaled&nbsp;&nbsp;users&nbsp;&nbsp;cannot&nbsp;&nbsp;massmention</h5>
+</div>
+<div>
+    <h5 style="padding-top: 20px; color: #FFF;">/antimention&nbsp;&nbsp;on/off</h5>
+</div>
+</div>
+<div class="quote">
+    <div>
+            <h5 style="color: #FFF;">avatar</h5>
+    </div>
+    <div>
+        <h5 style="padding-top: 20px; color: #4f8cff;">Display&nbsp;&nbsp;users&nbsp;&nbsp;avatar</h5>
+</div>
+<div>
+    <h5 style="padding-top: 20px; color: #FFF;">/avatar&nbsp;&nbsp;[user]</h5>
 </div>
 </div>
 <div class="quote">
@@ -71,109 +104,296 @@
             <h5 style="color: #FFF;">ban</h5>
     </div>
     <div>
-        <h5 style="padding-top: 20px; color: #4f8cff;">Bans a user</h5>
+        <h5 style="padding-top: 20px; color: #4f8cff;">Ban&nbsp;&nbsp;a&nbsp;&nbsp;user</h5>
 </div>
 <div>
-    <h5 style="padding-top: 20px; color: #FFF;">/ban [user] [reason]</h5>
+    <h5 style="padding-top: 20px; color: #FFF;">/ban&nbsp;&nbsp;[user]&nbsp;&nbsp;[reason]</h5>
 </div>
 </div>
 <div class="quote">
     <div>
-            <h5 style="color: #FFF;">ban</h5>
+            <h5 style="color: #FFF;">clear</h5>
     </div>
     <div>
-        <h5 style="padding-top: 20px; color: #4f8cff;">Bans a user</h5>
+        <h5 style="padding-top: 20px; color: #4f8cff;">Clear&nbsp;&nbsp;a&nbsp;&nbsp;channel&nbsp;&nbsp;(recreates the channel, permissions not saved)</h5>
 </div>
 <div>
-    <h5 style="padding-top: 20px; color: #FFF;">/ban [user] [reason]</h5>
+    <h5 style="padding-top: 20px; color: #FFF;">/clear</h5>
 </div>
 </div>
 <div class="quote">
     <div>
-            <h5 style="color: #FFF;">ban</h5>
+            <h5 style="color: #FFF;">edit</h5>
     </div>
     <div>
-        <h5 style="padding-top: 20px; color: #4f8cff;">Bans a user</h5>
+        <h5 style="padding-top: 20px; color: #4f8cff;">Edit&nbsp;&nbsp;a&nbsp;&nbsp;giveaway</h5>
 </div>
 <div>
-    <h5 style="padding-top: 20px; color: #FFF;">/ban [user] [reason]</h5>
+    <h5 style="padding-top: 20px; color: #FFF;">/edit&nbsp;&nbsp;[giveaway(id or prize)]&nbsp;&nbsp;[duration]&nbsp;&nbsp;[winners]&nbsp;&nbsp;[prize]</h5>
 </div>
 </div>
 <div class="quote">
     <div>
-            <h5 style="color: #FFF;">ban</h5>
+            <h5 style="color: #FFF;">end</h5>
     </div>
     <div>
-        <h5 style="padding-top: 20px; color: #4f8cff;">Bans a user</h5>
+        <h5 style="padding-top: 20px; color: #4f8cff;">End&nbsp;&nbsp;an&nbsp;&nbsp;already&nbsp;&nbsp;running&nbsp;&nbsp;giveaway</h5>
 </div>
 <div>
-    <h5 style="padding-top: 20px; color: #FFF;">/ban [user] [reason]</h5>
+    <h5 style="padding-top: 20px; color: #FFF;">/end&nbsp;&nbsp;[giveaway(id or prize)]</h5>
+</div>
+</div>
+<div class="quote">
+  <div>
+          <h5 style="color: #FFF;">ghostping</h5>
+  </div>
+  <div>
+      <h5 style="padding-top: 20px; color: #4f8cff;">If&nbsp;&nbsp;enabled&nbsp;&nbsp;it&nbsp;&nbsp;sends&nbsp;&nbsp;an&nbsp;&nbsp;embed&nbsp;&nbsp;if&nbsp;&nbsp;ghostpinging</h5>
+</div>
+<div>
+  <h5 style="padding-top: 20px; color: #FFF;">/ghostping&nbsp;&nbsp;on/off</h5>
 </div>
 </div>
 <div class="quote">
     <div>
-            <h5 style="color: #FFF;">ban</h5>
+            <h5 style="color: #FFF;">howgay</h5>
     </div>
     <div>
-        <h5 style="padding-top: 20px; color: #4f8cff;">Bans a user</h5>
+        <h5 style="padding-top: 20px; color: #4f8cff;">Shows&nbsp;&nbsp;how&nbsp;&nbsp;gay&nbsp;&nbsp;you&nbsp;&nbsp;are&nbsp;&nbsp;(random number)</h5>
 </div>
 <div>
-    <h5 style="padding-top: 20px; color: #FFF;">/ban [user] [reason]</h5>
+    <h5 style="padding-top: 20px; color: #FFF;">/howgay</h5>
 </div>
 </div>
 <div class="quote">
     <div>
-            <h5 style="color: #FFF;">ban</h5>
+            <h5 style="color: #FFF;">invite</h5>
     </div>
     <div>
-        <h5 style="padding-top: 20px; color: #4f8cff;">Bans a user</h5>
+        <h5 style="padding-top: 20px; color: #4f8cff;">Send&nbsp;&nbsp;invite&nbsp;&nbsp;link&nbsp;&nbsp;for&nbsp;&nbsp;bot</h5>
 </div>
 <div>
-    <h5 style="padding-top: 20px; color: #FFF;">/ban [user] [reason]</h5>
+    <h5 style="padding-top: 20px; color: #FFF;">/invite</h5>
 </div>
 </div>
 <div class="quote">
     <div>
-            <h5 style="color: #FFF;">ban</h5>
+            <h5 style="color: #FFF;">kick</h5>
     </div>
     <div>
-        <h5 style="padding-top: 20px; color: #4f8cff;">Bans a user</h5>
+        <h5 style="padding-top: 20px; color: #4f8cff;">Kick&nbsp;&nbsp;a&nbsp;&nbsp;user</h5>
 </div>
 <div>
-    <h5 style="padding-top: 20px; color: #FFF;">/ban [user] [reason]</h5>
+    <h5 style="padding-top: 20px; color: #FFF;">/kick&nbsp;&nbsp;[user]&nbsp;&nbsp;[reason]</h5>
 </div>
 </div>
 <div class="quote">
     <div>
-            <h5 style="color: #FFF;">ban</h5>
+            <h5 style="color: #FFF;">langlist</h5>
     </div>
     <div>
-        <h5 style="padding-top: 20px; color: #4f8cff;">Bans a user</h5>
+        <h5 style="padding-top: 20px; color: #4f8cff;">Display&nbsp;&nbsp;all&nbsp;&nbsp;languages&nbsp;&nbsp;available&nbsp;&nbsp;for&nbsp;&nbsp;/translate&nbsp;&nbsp;command</h5>
 </div>
 <div>
-    <h5 style="padding-top: 20px; color: #FFF;">/ban [user] [reason]</h5>
+    <h5 style="padding-top: 20px; color: #FFF;">/langlist</h5>
 </div>
 </div>
 <div class="quote">
     <div>
-            <h5 style="color: #FFF;">ban</h5>
+            <h5 style="color: #FFF;">list</h5>
     </div>
     <div>
-        <h5 style="padding-top: 20px; color: #4f8cff;">Bans a user</h5>
+        <h5 style="padding-top: 20px; color: #4f8cff;">List&nbsp;&nbsp;all&nbsp;&nbsp;the&nbsp;&nbsp;active&nbsp;&nbsp;giveaways&nbsp;&nbsp;in&nbsp;&nbsp;this&nbsp;&nbsp;guild</h5>
 </div>
 <div>
-    <h5 style="padding-top: 20px; color: #FFF;">/ban [user] [reason]</h5>
+    <h5 style="padding-top: 20px; color: #FFF;">/list</h5>
 </div>
 </div>
 <div class="quote">
-    <div>
-            <h5 style="color: #FFF;">ban</h5>
-    </div>
-    <div>
-        <h5 style="padding-top: 20px; color: #4f8cff;">Bans a user</h5>
+  <div>
+          <h5 style="color: #FFF;">lock</h5>
+  </div>
+  <div>
+      <h5 style="padding-top: 20px; color: #4f8cff;">Lock&nbsp;&nbsp;a&nbsp;&nbsp;channel</h5>
 </div>
 <div>
-    <h5 style="padding-top: 20px; color: #FFF;">/ban [user] [reason]</h5>
+  <h5 style="padding-top: 20px; color: #FFF;">/lock&nbsp;&nbsp;[channel]</h5>
+</div>
+</div>
+<div class="quote">
+  <div>
+          <h5 style="color: #FFF;">pause</h5>
+  </div>
+  <div>
+      <h5 style="padding-top: 20px; color: #4f8cff;">Pause&nbsp;&nbsp;an&nbsp;&nbsp;already&nbsp;&nbsp;running&nbsp;&nbsp;giveaway</h5>
+</div>
+<div>
+  <h5 style="padding-top: 20px; color: #FFF;">/pause&nbsp;&nbsp;[giveaway(id or prize)]</h5>
+</div>
+</div>
+<div class="quote">
+  <div>
+          <h5 style="color: #FFF;">purge</h5>
+  </div>
+  <div>
+      <h5 style="padding-top: 20px; color: #4f8cff;">Delete&nbsp;&nbsp;many&nbsp;&nbsp;messages</h5>
+</div>
+<div>
+  <h5 style="padding-top: 20px; color: #FFF;">/purge&nbsp;&nbsp;[amount]</h5>
+</div>
+</div>
+<div class="quote">
+  <div>
+          <h5 style="color: #FFF;">removerole</h5>
+  </div>
+  <div>
+      <h5 style="padding-top: 20px; color: #4f8cff;">Remove&nbsp;&nbsp;a&nbsp;&nbsp;role&nbsp;&nbsp;from&nbsp;&nbsp;a&nbsp;&nbsp;user</h5>
+</div>
+<div>
+  <h5 style="padding-top: 20px; color: #FFF;">/remove&nbsp;&nbsp;[user]&nbsp;&nbsp;[role]</h5>
+</div>
+</div>
+<div class="quote">
+  <div>
+          <h5 style="color: #FFF;">reroll</h5>
+  </div>
+  <div>
+      <h5 style="padding-top: 20px; color: #4f8cff;">Reroll&nbsp;&nbsp;an&nbsp;&nbsp;already&nbsp;&nbsp;running&nbsp;&nbsp;giveaway</h5>
+</div>
+<div>
+  <h5 style="padding-top: 20px; color: #FFF;">/reroll&nbsp;&nbsp;[giveaway(id or prize)]</h5>
+</div>
+</div>
+<div class="quote">
+  <div>
+          <h5 style="color: #FFF;">resume</h5>
+  </div>
+  <div>
+      <h5 style="padding-top: 20px; color: #4f8cff;">Resume&nbsp;&nbsp;an&nbsp;already&nbsp;&nbsp;paused&nbsp;&nbsp;giveaway</h5>
+</div>
+<div>
+  <h5 style="padding-top: 20px; color: #FFF;">/resume&nbsp;&nbsp;[giveaway(id or prize)]</h5>
+</div>
+</div>
+<div class="quote">
+  <div>
+          <h5 style="color: #FFF;">say</h5>
+  </div>
+  <div>
+      <h5 style="padding-top: 20px; color: #4f8cff;">Repeats&nbsp;&nbsp;what&nbsp;&nbsp;you&nbsp;&nbsp;say</h5>
+</div>
+<div>
+  <h5 style="padding-top: 20px; color: #FFF;">/say&nbsp;&nbsp;[text]</h5>
+</div>
+</div>
+<div class="quote">
+  <div>
+          <h5 style="color: #FFF;">serverinfo</h5>
+  </div>
+  <div>
+      <h5 style="padding-top: 20px; color: #4f8cff;">Show&nbsp;&nbsp;info&nbsp;&nbsp;about&nbsp;&nbsp;a&nbsp;&nbsp;server</h5>
+</div>
+<div>
+  <h5 style="padding-top: 20px; color: #FFF;">/serverinfo</h5>
+</div>
+</div>
+<div class="quote">
+  <div>
+          <h5 style="color: #FFF;">slowmode</h5>
+  </div>
+  <div>
+      <h5 style="padding-top: 20px; color: #4f8cff;">Change&nbsp;&nbsp;channel&nbsp;&nbsp;slowmode</h5>
+</div>
+<div>
+  <h5 style="padding-top: 20px; color: #FFF;">/slowmode&nbsp;&nbsp;[time]</h5>
+</div>
+</div>
+<div class="quote">
+  <div>
+          <h5 style="color: #FFF;">start</h5>
+  </div>
+  <div>
+      <h5 style="padding-top: 20px; color: #4f8cff;">Start&nbsp;&nbsp;a&nbsp;&nbsp;giveaway</h5>
+</div>
+<div>
+  <h5 style="padding-top: 20px; color: #FFF;">/start [duration] [winners] [prize] [channel] optional: [bonusrole] [bonusamount] [invite] [role]</h5>
+</div>
+</div>
+<div class="quote">
+  <div>
+          <h5 style="color: #FFF;">suggestion</h5>
+  </div>
+  <div>
+      <h5 style="padding-top: 20px; color: #4f8cff;">Create&nbsp;&nbsp;a&nbsp;&nbsp;suggestion&nbsp;&nbsp;embed</h5>
+</div>
+<div>
+  <h5 style="padding-top: 20px; color: #FFF;">/suggestion&nbsp;&nbsp;[text]</h5>
+</div>
+</div>
+<div class="quote">
+  <div>
+          <h5 style="color: #FFF;">ticket</h5>
+  </div>
+  <div>
+      <h5 style="padding-top: 20px; color: #4f8cff;">Send&nbsp;&nbsp;the&nbsp;&nbsp;ticket&nbsp;&nbsp;panel</h5>
+</div>
+<div>
+  <h5 style="padding-top: 20px; color: #FFF;">/ticket&nbsp;&nbsp;[channel]</h5>
+</div>
+</div>
+<div class="quote">
+  <div>
+          <h5 style="color: #FFF;">translate</h5>
+  </div>
+  <div>
+      <h5 style="padding-top: 20px; color: #4f8cff;">Translate&nbsp;&nbsp;a&nbsp;&nbsp;text&nbsp;&nbsp;just&nbsp;&nbsp;like&nbsp;&nbsp;google&nbsp;&nbsp;translate</h5>
+</div>
+<div>
+  <h5 style="padding-top: 20px; color: #FFF;">/translate&nbsp;&nbsp;[language]&nbsp;&nbsp;[text]</h5>
+</div>
+</div>
+<div class="quote">
+  <div>
+          <h5 style="color: #FFF;">unlock</h5>
+  </div>
+  <div>
+      <h5 style="padding-top: 20px; color: #4f8cff;">Unlock&nbsp;&nbsp;a&nbsp;&nbsp;locked&nbsp;&nbsp;channel</h5>
+</div>
+<div>
+  <h5 style="padding-top: 20px; color: #FFF;">/unlock&nbsp;&nbsp;[channel]</h5>
+</div>
+</div>
+<div class="quote">
+  <div>
+          <h5 style="color: #FFF;">userinfo</h5>
+  </div>
+  <div>
+      <h5 style="padding-top: 20px; color: #4f8cff;">Show&nbsp;&nbsp;info&nbsp;&nbsp;about&nbsp;&nbsp;a&nbsp;&nbsp;user</h5>
+</div>
+<div>
+  <h5 style="padding-top: 20px; color: #FFF;">/userinfo&nbsp;&nbsp;[user]</h5>
+</div>
+</div>
+<div class="quote">
+  <div>
+          <h5 style="color: #FFF;">warn</h5>
+  </div>
+  <div>
+      <h5 style="padding-top: 20px; color: #4f8cff;">Warn&nbsp;&nbsp;a&nbsp;&nbsp;user</h5>
+</div>
+<div>
+  <h5 style="padding-top: 20px; color: #FFF;">/warn&nbsp;&nbsp;[user]</h5>
+</div>
+</div>
+<div class="quote">
+  <div>
+          <h5 style="color: #FFF;">warnings</h5>
+  </div>
+  <div>
+      <h5 style="padding-top: 20px; color: #4f8cff;">Check&nbsp;&nbsp;user&nbsp;&nbsp;warnings</h5>
+</div>
+<div>
+  <h5 style="padding-top: 20px; color: #FFF;">/warnings&nbsp;&nbsp;[user]</h5>
 </div>
 </div>
 </div>
@@ -315,11 +535,11 @@
     padding-top: 1em;
     display: grid;
     grid-gap: 2em;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
 }
 
     .quote {
-        padding: 15px;
+        padding: 20px;
         border-radius: .3em;
         
         background-color: #2b2b2b;
@@ -569,6 +789,8 @@ img {
               document.getElementById("main").style.marginLeft= "0";
               }
             })
+
+
             </script>
 </head>
 </html>
