--- a/commands/slashcommands.html
+++ b/commands/slashcommands.html
@@ -396,6 +396,17 @@
   <h5 style="padding-top: 20px; color: #FFF;">/warnings&nbsp;&nbsp;[user]</h5>
 </div>
 </div>
+	<div class="quote">
+  <div>
+          <h5 style="color: #FFF;"></h5>
+  </div>
+  <div>
+      <h5 style="padding-top: 20px; color: #4f8cff;"></h5>
+</div>
+<div>
+  <h5 style="padding-top: 20px; color: #FFF;"></h5>
+</div>
+</div>
 </div>
 
 <style>
