--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@ img {
     <div id="mySidebar" class="sidebar">
         <a href="/">Home</a>
         <a href="/commands/slashcommands">Commands</a>
-        <a href="/about">About</a>
+        <a href="/about">Tobias krogell</a>
         <a href="https://www.paypal.me/zouxabot">Donate</a>
         <a href="https://discord.gg/HVyHjy7Vzp">Join Our Discord</a>
         <a href="https://discord.com/api/oauth2/authorize?client_id=983058805661249536&permissions=8&scope=bot%20applications.commands">Invite Me</a>
